# pytorch-YOLOv4

./: .gitignore  1240.npy  1786.npy  MANIFEST.in  README.md  Use_yolov4_to_train_your_own_data.md  camera.py  cfg.py  common.py  darknet2onnx.py  dataset.py  demo.py  demo2.py  demo_darknet2onnx.py  demo_onnx.py  demo_pytorch2onnx.py  demo_tensorflow.py  demo_trt.py  demo_trt_batched.py  evaluate_on_coco.py  mns.py  models.py  onnx_inference_demo.py  pyproject.toml  pytorch_weights_demo.py  requirements.txt  run_coco.py  save_pytorch_weights.py  setup.py  train.py  xml2yolov4.py  yolov4_1_3_416_416_fp16.engine.infer
DeepStream/: Readme.md  config_infer_primary_yoloV4.txt  deepstream_app_config_yoloV4.txt  yoloPlugins.h
DeepStream/nvdsinfer_custom_impl_Yolo/: Makefile  Readme.md  kernels.cu  nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  trt_utils.cpp  yolo.cpp  (+4 more)
cfg/: example_cfg.yaml  models.py  yolov3.cfg  yolov4-sam-mish.cfg
data/: resize.py
docker/: .env  Dockerfile  docker-compose.yml
pytorch_yolo/: camera.py  coco_annotation.py  config.py  darknet2onnx.py  darknet2pytorch.py  onnx2tensorflow.py  region_loss.py  torch_utils.py  utils.py  yolo_layer.py
tool/: base.py  camera.py  cfg.py  class_names.py  coco_annotation.py  config.py  darknet2onnx.py  darknet2pytorch.py  pytorch2onnx.py  region_layer.py  region_loss.py  torch_utils.py  utils.py  utils_boost.py  utils_iou.py  utils_iou_test.py  utils_no_torch.py  weights.py  yolo_layer.py
utils/: mish.py  region_loss.py  utils.py  yolo_layer.py
yolov4/: __init__.py  cfg  custom_loader.py  demo.py  tool
(+9 files in other folders)
